# Asus_Armercreate_Linux

./: .gitignore  Cargo.toml  IMPLEMENTATION.md  LICENSE  README.md  install.sh  pyproject.toml  requirements.txt  setup.py  uninstall.sh
data/: org.asus.armoury.desktop  org.asuslinux.Armoury.conf  org.asuslinux.armoury.desktop
docs/: CONTRIBUTING.md  DEVELOPER.md  INSTALLATION.md  SUPPORTED_MODELS.md  TROUBLESHOOTING.md
polkit/: org.asus.armoury.policy  org.asuslinux.armoury.policy
scripts/: build-test.sh  install.sh  uninstall.sh
src/backend/: __init__.py
src/backend/hardware/: __init__.py  battery_control.py  cpu_control.py  detector.py  fan_control.py  rgb_control.py  thermal_monitor.py
src/backend/services/: __init__.py  daemon.py  dbus_service.py  profile_manager.py
src/backend/utils/: __init__.py  config.py  helpers.py  logger.py
src/common/: Cargo.toml
src/common/src/: dbus_interface.rs  error.rs  lib.rs  types.rs
src/daemon/: Cargo.toml
src/daemon/src/: config.rs  dbus_server.rs  main.rs  profiles.rs
src/daemon/src/hardware/: asusctl.rs  mod.rs  sysfs.rs
src/frontend/: __init__.py
src/frontend/ui/: __init__.py  application.py  main_window.py
src/gui/: Cargo.toml
src/gui/src/: dbus_client.rs  main.rs  window.rs
src/gui/src/widgets/: fan_curve.rs  mod.rs  rgb_picker.rs
systemd/: asus-armoury-daemon.service
tests/: integration_test.rs
udev/: 99-asus-armoury.rules
