[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asus-armoury-crate"
version = "1.0.0"
description = "Linux desktop application for ASUS laptop hardware control"
readme = "README.md"
license = {text = "GPL-3.0"}
requires-python = ">=3.9"
authors = [
    {name = "ASUS Armoury Crate Linux Contributors"}
]
keywords = ["asus", "armoury", "crate", "linux", "hardware", "control", "fan", "rgb"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Hardware",
    "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
dbus = ["dasbus>=1.6"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/asus-armoury-linux/asus-armoury-crate"
Documentation = "https://github.com/asus-armoury-linux/asus-armoury-crate/wiki"
Repository = "https://github.com/asus-armoury-linux/asus-armoury-crate.git"
Issues = "https://github.com/asus-armoury-linux/asus-armoury-crate/issues"

[project.scripts]
asus-armoury = "frontend.ui.application:main"
asus-armoury-daemon = "backend.services.daemon:main"

[project.gui-scripts]
asus-armoury-gui = "frontend.ui.application:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "build", "dist", ".eggs"]
